--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "cowsay": "^1.4.0",
-    "express": "^4.16.4"
+    "database-manager": "^1.0.0",
+    "express": "^4.16.4",
+    "keyforge-parser": "^1.0.0",
+    "mongoose": "^5.4.11",
+    "node-fetch": "^2.3.0"
   }
 }
