--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^3.4.0",
     "react": "^16.8.1",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.4"
