--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.4.0",
+    "query-string": "^6.2.0",
     "react": "^16.8.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.8.1",
